Fix stacked bar chart bottom alignment

--- a/app/intern/styles.css
+++ b/app/intern/styles.css
@@ -799,6 +799,7 @@
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .bar-chart__stack--stacked .bar-chart__layer {
